--- a/works.html
+++ b/works.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tagpo Concepts - Works</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -21,17 +22,17 @@
 </nav>
 
 <div class="container">
-    <section id="portfolio">
-        <h2>Portfolio</h2>
+    <section id="works">
+        <h2>Our Works</h2>
         <div class="work-item">
-            <h3>Project One</h3>
-            <img src="project1.jpg" alt="Project One Image" style="width: 100%; max-width: 500px;">
+            <img src="https://via.placeholder.com/800x600?text=Project+1" alt="Project 1">
+            <h3>Project 1</h3>
             <p>Description of Project One. This project was completed in [Year] and involved [brief description]. The outcome was [describe the result or benefit].</p>
         </div>
 
         <div class="work-item">
-            <h3>Project Two</h3>
-            <img src="project2.jpg" alt="Project Two Image" style="width: 100%; max-width: 500px;">
+            <img src="https://via.placeholder.com/800x600?text=Project+2" alt="Project 2">
+            <h3>Project 2</h3>
             <p>Description of Project Two. This project was completed in [Year] and involved [brief description]. The outcome was [describe the result or benefit].</p>
         </div>
 
