--- a/index.html
+++ b/index.html
@@ -52,16 +52,36 @@
     nav {
       display: flex;
       justify-content: center;
+      align-items: center;
       gap: 2.5rem;
       font-weight: 600;
       font-size: 1.1rem;
       letter-spacing: 0.05em;
+      position: relative;
+    }
+    nav a {
+      z-index: 1;
     }
     nav a.active,
     nav a:hover {
       color: #d4af37;
       border-bottom: 2px solid #d4af37;
       padding-bottom: 0.2rem;
+    }
+
+    /* Logo container in nav */
+    .nav-logo {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 0;
+      pointer-events: none;
+    }
+    .nav-logo img {
+      height: 50px;
+      width: auto;
+      filter: brightness(0) invert(1);
+      /* White logo by default */
     }
 
     /* Hero Section */
@@ -110,7 +130,7 @@
     /* About */
     #about .content {
       max-width: 800px;
-      margin: 0 auto;
+      margin: 0 auto 3rem auto;
       text-align: center;
       font-size: 1.2rem;
       line-height: 1.8;
@@ -118,6 +138,20 @@
     }
     #about .content strong {
       color: #d4af37;
+    }
+    #about .video-container {
+      max-width: 800px;
+      margin: 0 auto;
+      border: 3px solid #d4af37;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 0 15px #d4af37;
+    }
+    #about iframe {
+      width: 100%;
+      height: 450px;
+      display: block;
+      border: none;
     }
 
     /* Portfolio */
@@ -208,6 +242,12 @@
       #hero p {
         font-size: 1.2rem;
       }
+      #about iframe {
+        height: 250px;
+      }
+      .nav-logo img {
+        height: 40px;
+      }
     }
   </style>
 </head>
@@ -216,6 +256,13 @@
     <nav>
       <a href="#hero" class="active">Home</a>
       <a href="#about">About</a>
+
+      <!-- Logo in the middle -->
+      <div class="nav-logo" aria-label="Retratura Logo">
+        <!-- Replace the src below with your actual logo image -->
+        <img src="https://via.placeholder.com/150x50?text=Retratura+Logo" alt="Retratura Logo" />
+      </div>
+
       <a href="#portfolio">Portfolio</a>
       <a href="#contact">Hire Us</a>
     </nav>
@@ -239,6 +286,14 @@
           fashion brands, and serve as each other’s stepping stone in promoting
           beauty in pictures.
         </p>
+      </div>
+      <div class="video-container" aria-label="Documentary Film Video">
+        <iframe
+          src="https://www.youtube.com/embed/your_video_id_here"
+          title="Retratura Documentary Film"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
       </div>
     </section>
 
