--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
       <h2 class="section-title">Our Works</h2>
       <div class="gallery">
         <img
-          src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=800&q=80"
+          src="sample1.jpg"
           alt="Elegant woman portrait 1"
           loading="lazy"
         />
